AKS/Nginx-SpringBoot-Ingress/aks-nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress  
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /reading-list/*
